--- a/estilo/style.css
+++ b/estilo/style.css
@@ -28,3 +28,10 @@ section#telefone {
     width: 311px;
     background-image: url('../imagens/frame-iphone.png');
 }
+iframe#tela {
+    position:relative ;
+    top: 80px;
+    left: 23px;
+    width: 265px;
+    height: 471px;
+}
